# kernelz

./: .gitignore  README.md  kernelz.cmd  noxfile.py  pyproject.toml
kernelz/: __init__.py  __main__.py  core.py  jupyter.py  kernelz.py
tests/: jupyter_compat_test.py  test_core.py  test_jupyter.py  test_kernelz.py
tests/data/kernels/squad/: kernel.json
tests/data/kernels/wallop/: kernel.json
