[tool.poetry]
name = "kernelz"
version = "0.1.0"
description = "A tool to view and manage conda kernels on your machine"
authors = ["Dwight Gunning <dgunning@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
kernelz = "kernelz.kernelz:app"

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0.0"
typer = { extras = ["all"], version = "^0.3.2" }
pendulum = "^2.1.2"
rich = "^9.11.0"
ipykernel = "^5.5.0"
jupyterlab = "^3.0.9"

[tool.poetry.dev-dependencies]
nox = "^2020.12.31"
pytest = "^6.2.2"
nox-poetry = "^0.8.1"
isort = "^5.7.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
